# floww

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: install.sh
src/floww/: __init__.py  __main__.py  app_launcher.py  cli.py  config.py  constants.py  errors.py  utils.py  workflow_manager.py  workspace.py
src/floww/cli/: helpers.py  main.py
src/floww/cli/commands/: add.py  apply.py  edit.py  init.py  list.py  remove.py  validate.py
src/floww/core/: __init__.py  config.py  launcher.py  loader.py  workflow.py  workspace.py
src/floww/utils/: __init__.py  constants.py
tests/: test_app_launcher.py  test_cli_add.py  test_cli_apply.py  test_cli_list.py  test_cli_remove.py  test_cli_validate.py  test_config.py  test_workflow_manager.py
