[project]
name = "floww"
version = "0.1.0"
description = "CLI tool to manage Linux workspaces and launch applications based on YAML workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dagim G. Astatke", email = "dagim.astatke@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["PyYAML", "typer", "questionary", "ewmhlib"]

[project.optional-dependencies]
test = ["pytest", "pyinstaller"]

[project.scripts]
floww = "floww.__main__:main"
